// Database structure defined with DBML
// Docs: https://dbml.dbdiagram.io/docs

Project Stripe_OLTP {
  database_type: 'PostgreSQL'
  Note: 'Stripe\'s OLTP database proposal'
}


///// Tables /////

Table transactions {
  transaction_id bigint [primary key, unique]
  merchant_id bigint
  customer_id bigint
  timestamp datetime
  amount float
  fee float
  currency_code char(3) // ISO 4217
  payment_method text
  payment_status text
  device_type text
  ip_latitude float
  ip_longitude float
}

Table merchants {
  merchant_id bigint [primary key, unique]
  name text
  iban text
  country_code char(2) // ISO 3166-1 alpha-2
  // ...
}

Table customers {
  customer_id bigint [primary key, unique]
  name text
  iban text
  country_code char(2) // ISO 3166-1 alpha-2
  // ...
}


Table fraud_indicators {
  transaction_id bigint [primary key, unique]
  is_fraud boolean [null]
  // ...
}


///// Relationships /////

Ref: transactions.merchant_id > merchants.merchant_id
Ref: transactions.customer_id > customers.customer_id
Ref: transactions.transaction_id - fraud_indicators.transaction_id